--- a/akamai_wp.css
+++ b/akamai_wp.css
@@ -1,18 +1,18 @@
 /*********************
 General Styling for WP Admin Form
 *********************/
-.soasta_form {
+.akamai_form {
     background-color: #d8d9da;
     border: 1px solid #a8a8a8;
     margin-top: 20px;
     padding: 5px;
 }
 
-.soasta_input {
+.akamai_input {
     width: 390px;
 }
 
-.soasta_submit {
+.akamai_submit {
     background:#42B4E6;
     border: 1px solid #a8a8a8;
     border-radius: 6px;
